# ChangeLog for media-plugins/audacious-plugins
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.274 2014/01/28 14:10:03 ago Exp $

*audacious-plugins-3.6_alpha1 (12 Dec 2014)

  12 Dec 2014; Poncho <poncho@spahan.ch> +audacious-plugins-3.6_alpha1.ebuild,
  -audacious-plugins-3.5.2.ebuild, -files/notificationsupport-3.5.patch:
  media-plugins/audacious-plugins: version bump

*audacious-plugins-3.5.2 (01 Nov 2014)

  01 Nov 2014; Poncho <poncho@spahan.ch> +audacious-plugins-3.5.2.ebuild,
  -audacious-plugins-3.5.1.ebuild:
  media-plugins/audacious-plugins: version bump

*audacious-plugins-3.5.1 (01 Aug 2014)

  01 Aug 2014; Poncho <poncho@spahan.ch> +audacious-plugins-3.5.1.ebuild,
  -audacious-plugins-3.5.ebuild, metadata.xml:
  media-plugins/audacious-plugins: version bump

  16 May 2014; Poncho <poncho@spahan.ch> audacious-plugins-3.5.ebuild:
  media-plugins/audacious-plugins: depend on media-libs/libsdl[sound]

*audacious-plugins-3.5 (24 Apr 2014)

  24 Apr 2014; Poncho <poncho@spahan.ch> +audacious-plugins-3.5.ebuild,
  -audacious-plugins-3.4.3.ebuild, -audacious-plugins-3.5_beta1.ebuild,
  -files/notificationsupport.patch:
  media-plugins/audacious-plugins: version bump

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-plugins-3.4.1.ebuild:
  Stable for alpha, wrt bug #490463

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-plugins-3.4.1.ebuild:
  Stable for ppc64, wrt bug #490463

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-plugins-3.4.1.ebuild:
  Stable for ppc, wrt bug #490463

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-plugins-3.4.1.ebuild:
  Stable for x86, wrt bug #490463

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-plugins-3.4.1.ebuild:
  Stable for amd64, wrt bug #490463

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-plugins-3.4.1.ebuild:
  Stable for sparc, wrt bug #490463