@@ -1,1 +1,1 @@
-DIST audacious-plugins-3.6-alpha1-gtk3.tar.bz2 1754835 SHA256 bed1716730735810f7369d65ade4f0d94b985eaac0bdcd3681d0267bcfa03a74 SHA512 6f9861df06c29211034e2862332f3bf5624fbb4779df74d3f9ffffa49bda65ddd201cf9f5a66ae0806f242baf765cb70ccd5a563880e3054c4afc92ad0ed4d77 WHIRLPOOL 63cdc9795cd93dfa049186f06ab3a74f781e34e28b06ddc9528b159854669b55fc27665eab4e070eb1041a2d1e2612d5d784095f289107388a34a887259ef1f9
+DIST audacious-plugins-3.6-beta1-gtk3.tar.bz2 1770459 SHA256 0fa11e340cbb859fad6d4959edafb2e94f096f5aebe93dee01b9ba5e981ab593 SHA512 2013b5749d5d29b2be0d489cbbdbd0d60afbef6646f7be9f68973bea59c624ddeca5a3fcdfc8d3490c439e1cd7686f5ca8b51416ff7fa248e94ffc47241bdaf5 WHIRLPOOL c73fb376db6f631717858136141a5465277f9eedb6a7c47d6377e49b13ea4a8e6ce09878940ac99d15675011441abfd57fc571ebd034ec5ae59fce8548892e01
