@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/audacious-plugins
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.274 2014/01/28 14:10:03 ago Exp $
+
+*audacious-plugins-3.6_beta1 (30 Jan 2015)
+
+  30 Jan 2015; Poncho <poncho@spahan.ch> +audacious-plugins-3.6_beta1.ebuild,
+  -audacious-plugins-3.6_alpha1.ebuild:
+  media-plugins/audacious-plugins: version bump
 
 *audacious-plugins-3.6_alpha1 (12 Dec 2014)
 
